[gd_scene load_steps=8 format=3 uid="uid://crjgjhjwk1rt5"]

[ext_resource type="Script" path="res://GUI/Pause_Menu/pause_menu.gd" id="1_w7p0r"]
[ext_resource type="Texture2D" uid="uid://dv3n81hbaxgbp" path="res://Items/Sprites/items.png" id="2_buubl"]
[ext_resource type="Script" path="res://GUI/Pause_Menu/Inventory/Scripts/inventory_ui.gd" id="3_2hrx1"]
[ext_resource type="PackedScene" uid="uid://bql5fw1pm8ykt" path="res://GUI/Pause_Menu/Inventory/inventory_slot.tscn" id="3_jm4s4"]
[ext_resource type="Resource" uid="uid://bu2ce2ya2v432" path="res://GUI/Pause_Menu/Inventory/player_inventory.tres" id="4_v0467"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2m6av"]
atlas = ExtResource("2_buubl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5uqa5"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_2m6av")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_w7p0r")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.117647, 0.117647, 0.768627)

[node name="Label" type="Label" parent="."]
modulate = Color(0.302414, 0.551958, 0.407252, 1)
offset_left = 194.0
offset_top = 28.0
offset_right = 286.0
offset_bottom = 77.0
text = "[ PAUSED ]

"
horizontal_alignment = 1

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_left = 132.0
offset_top = 77.0
offset_right = 328.0
offset_bottom = 165.0
theme_override_styles/panel = SubResource("StyleBoxTexture_5uqa5")

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer"]
layout_mode = 2
columns = 5
script = ExtResource("3_2hrx1")
data = ExtResource("4_v0467")

[node name="InventorySlot" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_jm4s4")]
layout_mode = 2

[node name="InventorySlot2" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_jm4s4")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_jm4s4")]
layout_mode = 2

[node name="InventorySlot4" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_jm4s4")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_jm4s4")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_jm4s4")]
layout_mode = 2

[node name="InventorySlot7" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_jm4s4")]
layout_mode = 2

[node name="InventorySlot8" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_jm4s4")]
layout_mode = 2

[node name="InventorySlot9" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_jm4s4")]
layout_mode = 2

[node name="InventorySlot10" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_jm4s4")]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -58.0
offset_right = -132.0
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button_Save" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Button_Load" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Button_Quit" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Quit Game"

[node name="item_description" type="Label" parent="Control"]
modulate = Color(0.302414, 0.551958, 0.407252, 1)
layout_mode = 2
offset_left = 142.0
offset_top = 165.0
offset_right = 318.0
offset_bottom = 214.0
theme_override_font_sizes/font_size = 10
text = "Who doesn't like a shiny pretty gem! dfjdafafd SHINNY!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 4
